/fabric mods command

--- a/src/main/resources/assets/fabric/lang/en_us.json
+++ b/src/main/resources/assets/fabric/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "fabric.gui.creativeTabPage": "Page %d/%d"
+  "fabric.gui.creativeTabPage": "Page %d/%d",
+  "fabric.command.mods_loaded": "Mods loaded:",
+  "fabric.command.by": "by"
 }
