--- a/fabric-networking-v0/src/main/resources/assets/fabric-networking-v0/lang/en_us.json
+++ b/fabric-networking-v0/src/main/resources/assets/fabric-networking-v0/lang/en_us.json
@@ -1,9 +1,11 @@
 {
 
   "fabric-networking-v0.hello.mismatch": "Mismatched hello packet version, expected version: %d.%d",
-  "fabric-networking-v0.missing.amount": "You are missing %d mods. ",
-  "fabric-networking-v0.missing.requires": "This server requires you install the following mod(s): ",
+  "fabric-networking-v0.hello.missing.version": "Hello Packet was missing a version within CompoundTag",
+  "fabric-networking-v0.missing.hello.missing.nullmods": "Hello Packet had null mods CompoundTag",
+  "fabric-networking-v0.missing.amount": "You are missing %d mod(s). ",
   "fabric-networking-v0.mismatch_spaced": " These mod(s) have a version mismatch: ",
-  "fabric-networking-v0.defaults.mismatch": "Mismatched version in %d. Expected %d "
-  
+  "fabric-networking-v0.defaults.mismatch": "Mismatched version in %d. Expected %d ",
+  "fabric-networking-v0.defaults.missing": "Missing %d of %d. ",
+  "fabric-networking-v0.defaults.failedNoHandler": "%d failed handshake process."
 }
