--- a/fabric-key-binding-api-v1/src/testmod/resources/assets/fabric-keybindings-v1-testmod/lang/en_us.json
+++ b/fabric-key-binding-api-v1/src/testmod/resources/assets/fabric-keybindings-v1-testmod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
-  "category.this.is.a.test": "This is a test",
-  "key.fabric-keybindings-v1-testmod.test_keybinding": "Test"
+  "category.first.test": "First Test Category",
+  "category.second.test": "Second Test Category",
+  "key.fabric-keybindings-v1-testmod.test_keybinding_1": "Test 1",
+  "key.fabric-keybindings-v1-testmod.test_keybinding_2": "Test 2",
+  "key.fabric-keybindings-v1-testmod.test_keybinding_sticky": "Sticky Test"
 }
