Fix default count label and durability bar properties
Testmod: Fix Hidden Cooldown item not having localization
Testmod: Add count label test: Obfuscated Count Label item

--- a/fabric-renderer-registries-v1/src/testmod/resources/assets/fabric-renderer-registries-v1-testmod/lang/en_us.json
+++ b/fabric-renderer-registries-v1/src/testmod/resources/assets/fabric-renderer-registries-v1-testmod/lang/en_us.json
@@ -3,5 +3,7 @@
   "item.fabric-renderer-registries-v1-testmod.mana_storage": "Mana Storage",
   "item.fabric-renderer-registries-v1-testmod.water_lava_bucket": "Water & Lava Bucket",
   "item.fabric-renderer-registries-v1-testmod.disco_ball": "Disco Ball",
-  "item.fabric-renderer-registries-v1-testmod.long_cooldown": "Long Cooldown"
+  "item.fabric-renderer-registries-v1-testmod.long_cooldown": "Long Cooldown",
+  "item.fabric-renderer-registries-v1-testmod.hidden_cooldown": "Hidden Cooldown",
+  "item.fabric-renderer-registries-v1-testmod.obfuscated_count": "Obfuscated Count Label"
 }
