Add message about Fabric Installer
Signed-off-by: IMS <31803019+IMS212@users.noreply.github.com>

--- a/src/main/resources/lang/WarningAPI.properties
+++ b/src/main/resources/lang/WarningAPI.properties
@@ -1,1 +1,1 @@
-api.warning=Fabric API is not meant to be run.\nPlease place this file in your mods folder.
+api.warning=Fabric API is not meant to be run.\nPlease place this file in your mods folder.\nIf you're looking to install Fabric, get the Fabric Installer from https://fabricmc.net/use
